Audio Player Hide, Pitch Shift Fix

--- a/client/app/css/main.css
+++ b/client/app/css/main.css
@@ -1056,6 +1056,8 @@ hr {
 
 .audio-player-wrapper[disabled]{
   cursor: not-allowed;
+  /* display:none added later  */
+  display: none; 
 }
 .audio-player-wrapper[disabled] .audio-player{
   opacity: 0.5;
